daemon: Fix crash when '@' is present in the device name

GDBus doesn't like '@' in the object path, so escape it.

https://bugs.freedesktop.org/show_bug.cgi?id=93095